<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home Control</string>

    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="desc_zone_icon">Icon to represent the zone.</string>

    <!-- Strings for Home tab -->
    <string name="home_zone_status">You currently have no zones setup up.  Select "Zones" to add and
        configure new zones.</string>

    <string name="seekbar_red_title">R</string>
    <string name="seekbar_green_title">G</string>
    <string name="seekbar_blue_title">B</string>
    <string name="brightness">Master brightness</string>

    <!-- Strings for Zones tab -->
    <string name="zones_current_zones">Current Zones : </string>
    <string name="zones_button_add">Add Zone</string>
    <string name="zones_button_remove">Remove Zone</string>
    <string name="desc_add_zone">Add zone button</string>
    <string name="desc_remove_zone">Remove zone button</string>

    <!-- Strings for Zones popups -->
    <string name="zones_enter_name">Enter new zone name: </string>
    <string name="zones_name_hint">New name</string>
    <string name="zones_add">Add</string>
    <string name="zones_cancel">Cancel</string>
    <string name="zones_add_dialog_title">Add New Zone</string>
    <string name="zones_select_icon">Select an icon for the zone</string>

    <!-- Strings for Zone context menu -->
    <string name="menu_zone_title">Modify Zone</string>
    <string name="menu_edit_zone">Edit Zone</string>
    <string name="menu_add_comp">Add Component</string>
    <string name="menu_remove_zone">Remove Zone</string>

    <!-- Strings for Add Components popups -->
    <string name="component_zone">Add component for</string>
    <string name="component_type">Type: </string>
    <string name="component_ip">IP:</string>
    <string name="spinner_hint">Select type</string>

    <string name="type_ac_120v_light">AC 120V Light</string>
    <string name="type_dc_12v_led_color">DC 12V Led Color</string>
    <string name="type_dc_12v_led_white">DC 12V Led White</string>

    <string-array name="component_types">
        <item>AC 120V Light</item>
        <item>DC 12V Led Color</item>
        <item>DC 12V Led White</item>
    </string-array>

    <!-- Strings for Add Module popups -->
    <string name="modules_add_dialog_title">Add New Module</string>
    <string name="module_zone">Add module for</string>
    <string name="module_name">Name: </string>
    <string name="module_status">Status:</string>
    <string name="module_type">Module:</string>

    <string-array name="module_status">
        <item>ON</item>
        <item>OFF</item>
        <item>N/A</item>
    </string-array>

    <string name="status_on">ON</string>
    <string name="status_off">OFF</string>
    <string name="status_not_available">N/A</string>

</resources>
