<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    style="@android:style/Theme.Dialog">

    <TextView
        android:id="@+id/tvComponentZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/component_zone"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/tvComponentType"
            android:text="@string/component_type"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/spComponentType"
            android:entries="@array/component_types"
            android:gravity="right"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/tvComponentIP"
            android:text="@string/component_ip"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/etComponentIP"
            android:layout_weight="3"
            android:inputType="numberDecimal"
            android:digits="0123456789."
            android:gravity="right"/>

    </LinearLayout>


</LinearLayout>
