<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            android:src="@drawable/power1"
            android:id="@+id/ivPower"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRed"
            android:textSize="19sp"
            android:padding="6dp"
            android:text="@string/seekbar_red_title"
            android:layout_toRightOf="@id/ivPower"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sbRed"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_toRightOf="@id/tvRed"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGreen"
            android:textSize="19sp"
            android:padding="6dp"
            android:text="@string/seekbar_green_title"
            android:layout_toRightOf="@id/ivPower"
            android:layout_below="@id/tvRed"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sbGreen"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_below="@id/sbRed"
            android:layout_toRightOf="@id/tvGreen"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvBlue"
            android:textSize="19sp"
            android:padding="6dp"
            android:text="@string/seekbar_blue_title"
            android:layout_toRightOf="@id/ivPower"
            android:layout_below="@id/tvGreen"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sbBlue"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_below="@id/sbGreen"
            android:layout_toRightOf="@id/tvBlue"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvBrightness"
            android:textSize="20sp"
            android:text="@string/brightness"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sbBrightness"
            />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvZoneStatus"
        android:textSize="16sp"/>
    <GridView
        android:id="@+id/gvZones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:stretchMode="columnWidth"
        android:numColumns="auto_fit"
        android:gravity="center_horizontal"
        android:horizontalSpacing="20dp"
        android:verticalSpacing="20dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>